# crew-ai-agent

./: .gitignore  README.md  pyproject.toml  report.md  report_2023.md  requirements
db/: chroma.sqlite3
src/research_helper/: crew.py  main.py
src/research_helper/config/: agents.yaml  tasks.yaml
src/research_helper/tools/: custom_tool.py
