[project]
name = "research_helper"
version = "0.1.0"
description = "research-helper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
research_helper = "research_helper.main:run"
run_crew = "research_helper.main:run"
train = "research_helper.main:train"
replay = "research_helper.main:replay"
test = "research_helper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
